--- a/_includes/welcome-tech-stack.html
+++ b/_includes/welcome-tech-stack.html
@@ -2,14 +2,16 @@
   {% for tech in site.data.welcomeSection.techStack %}
 
   <li class="welcome__tech">
-    <div class="welcome__tech-icon-wrap">
-      <img
-        src="{{tech.img}}"
-        alt="{{tech.name}} icon"
-        class="welcome__tech-icon"
-      />
-    </div>
-    <p class="welcome__tech-description">{{tech.name}}</p>
+    <a href="{{tech.link}}" target="_blank">
+      <div class="welcome__tech-icon-wrap">
+        <img
+          src="{{tech.img}}"
+          alt="{{tech.name}} icon"
+          class="welcome__tech-icon"
+        />
+      </div>
+      <p class="welcome__tech-description">{{tech.name}}</p></a
+    >
   </li>
   {% endfor %}
 </ul>
