--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -10,7 +10,9 @@
   <nav class="header__navigation">
     <ul class="header__items">
       {% for item in site.data.navigation %}
-      <li class="header__item"><a href="{{item.link}}">{{item.name}}</a></li>
+      <li class="header__item">
+        <a href="{{item.link}}" class="header__item-link">{{item.name}}</a>
+      </li>
       {% endfor %}
     </ul>
   </nav>
